basic index file

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<h1>This is Alex Czaja's page</h1>
-<p>By the End of the semester, this page will be my FINAL PROJECT with links to ALL OF MY PROJECTS</p>
+<!DOCTYPE html>
+
+<html lang= "en">
+    <head>
+        <title>
+            AC's page
+        </title>
+    </head>
+    <body>
+        <h1>This is Alex Czaja's page</h1>
+        <p>By the End of the semester, this page will be my FINAL PROJECT with links to ALL OF MY PROJECTS</p>
+    </body>
+</html>
