--- a/tables/index.html
+++ b/tables/index.html
@@ -1,1 +1,43 @@
-tables
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title> Table </title>
+    </head>
+    <body>
+        <h1> Bike Tech Made Easy </h1>
+        <h2>Four videos to help you get dialed-in </h2>
+        <table border="1" cellspacing="0" cellpadding="4">
+            <tbody>
+             <tr>
+                <th>Video Name</th>
+                <th>Description</th>
+                <th>Length</th>
+            </tr>
+            <tr>
+                <td><a href="https://www.youtube.com/watch?v=Kr8sJ4yJyts">Hacks for The Perfect Bike Fit</a></td>
+                <td>Tips to feel comfortable, confident and fast on your bike.</td>
+                <td>7:03</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.youtube.com/watch?v=QvzVRxlIUL0">The 5 Minute Bike Wash</a></td>
+                <td>How to clean your bike in a hurry.</td>
+                <td>5:47</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.youtube.com/watch?v=rWchudX-Tqs&t=339s">How to Replace a Bicycle Chain</a></td>
+                <td>A worn out chain makes for a crummy ride. Learn how to replace it.</td>
+                <td>6:49</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.youtube.com/watch?v=_jIf7CJ8QCI">Tubeless Dos & Don'ts</a></td>
+                <td>Whatever the terrian, "going tubeless" offers a range of benefits. Learn how to set-up tubeless tires.</td>
+                <td>6:09</td>
+            </tr>
+            </tbody>
+
+        </table>
+        <br> 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Kr8sJ4yJyts" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </body>
+</html>
