--- a/tables/index.html
+++ b/tables/index.html
@@ -13,26 +13,41 @@
                 <th>Video Name</th>
                 <th>Description</th>
                 <th>Length</th>
+                <th>Creator's YouTube Channel</th>
+                <th>Twitter</th>
+                <th>Instagram</th>
             </tr>
             <tr>
                 <td><a href="https://www.youtube.com/watch?v=Kr8sJ4yJyts">Hacks for The Perfect Bike Fit</a></td>
                 <td>Tips to feel comfortable, confident and fast on your bike.</td>
                 <td>7:03</td>
+                <td><a href="https://www.youtube.com/channel/UCuTaETsuCOkJ0H_GAztWt0Q">Global Cycling Network</a></td>
+                <td><a href="https://twitter.com/gcntweet">@gcntweet</a></td>
+                <td><a href="https://www.instagram.com/globalcyclingnetwork/">@globalcyclingnetwork</a></td>
             </tr>
             <tr>
                 <td><a href="https://www.youtube.com/watch?v=QvzVRxlIUL0">The 5 Minute Bike Wash</a></td>
                 <td>How to clean your bike in a hurry.</td>
                 <td>5:47</td>
+                <td><a href="https://www.youtube.com/channel/UCuTaETsuCOkJ0H_GAztWt0Q">Global Cycling Network</a></td>
+                <td><a href="https://twitter.com/gcntweet">@gcntweet</a></td>
+                <td><a href="https://www.instagram.com/globalcyclingnetwork/">@globalcyclingnetwork</a></td>
             </tr>
             <tr>
                 <td><a href="https://www.youtube.com/watch?v=rWchudX-Tqs&t=339s">How to Replace a Bicycle Chain</a></td>
                 <td>A worn out chain makes for a crummy ride. Learn how to replace it.</td>
                 <td>6:49</td>
+                <td><a href="https://www.youtube.com/channel/UCuTaETsuCOkJ0H_GAztWt0Q">Global Cycling Network</a></td>
+                <td><a href="https://twitter.com/gcntweet">@gcntweet</a></td>
+                <td><a href="https://www.instagram.com/globalcyclingnetwork/">@globalcyclingnetwork</a></td>
             </tr>
             <tr>
                 <td><a href="https://www.youtube.com/watch?v=_jIf7CJ8QCI">Tubeless Dos & Don'ts</a></td>
                 <td>Whatever the terrian, "going tubeless" offers a range of benefits. Learn how to set-up tubeless tires.</td>
                 <td>6:09</td>
+                <td><a href="https://www.youtube.com/channel/UCuTaETsuCOkJ0H_GAztWt0Q">Global Cycling Network</a></td>
+                <td><a href="https://twitter.com/gcntweet">@gcntweet</a></td>
+                <td><a href="https://www.instagram.com/globalcyclingnetwork/">@globalcyclingnetwork</a></td>
             </tr>
             </tbody>
 
