--- a/image-map/index.html
+++ b/image-map/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <title> Image map </title>
     </head>
@@ -8,15 +8,15 @@
         <img src="../img/giro.jpeg" alt="Giro" usemap="#giro">
 
         <map name="giro">
-            <area target="" alt="bernal" title="bernal" href="https://www.instagram.com/eganbernal/" coords="717,138,765,205" shape="rect">
-            <area target="" alt="ciccone" title="ciccone" href="https://www.instagram.com/ciccone_giulio/" coords="426,136,477,191" shape="rect">
-            <area target="" alt="bouwman" title="bouwman" href="https://www.instagram.com/koen.bouwman/" coords="275,153,326,214" shape="rect">
-            <area target="" alt="stage 9 recap" title="stage 9 recap" href="https://www.youtube.com/watch?v=0jnQpfiELDU" coords="912,490,79" shape="circle">
-            <area target="" alt="route results" title="route results" href="https://www.giroditalia.it/en/tappe/stage-9-of-the-giro-ditalia-2021-castel-di-sangro-campo-felice-rocca-di-cambio/" coords="583,503,73" shape="circle">
-            <area target="" alt="sidi" title="sidi" href="https://www.sidi.com/en/" coords="715,495,26" shape="circle">
-            <area target="" alt="pinarello" title="pinarello" href="https://pinarello.com/en-us" coords="722,296,832,303,776,331,779,372,779,423,770,471,761,505,751,390" shape="poly">
-            <area target="" alt="cervelo" title="cervelo" href="https://www.cervelo.com/en/" coords="241,301,339,310,325,343,329,383,333,428,336,519,267,538,279,372" shape="poly">
-            <area target="" alt="trek" title="trek" href="https://www.trekbikes.com/us/en_US/" coords="427,283,518,272,484,335,495,474,461,423,435,451,458,359,453,315" shape="poly">
+            <area target="_blank" alt="bernal" title="bernal" href="https://www.instagram.com/eganbernal/" coords="717,138,765,205" shape="rect">
+            <area target="_blank" alt="ciccone" title="ciccone" href="https://www.instagram.com/ciccone_giulio/" coords="426,136,477,191" shape="rect">
+            <area target="_blank" alt="bouwman" title="bouwman" href="https://www.instagram.com/koen.bouwman/" coords="275,153,326,214" shape="rect">
+            <area target="_blank" alt="stage 9 recap" title="stage 9 recap" href="https://www.youtube.com/watch?v=0jnQpfiELDU" coords="912,490,79" shape="circle">
+            <area target="_blank" alt="route results" title="route results" href="https://www.giroditalia.it/en/tappe/stage-9-of-the-giro-ditalia-2021-castel-di-sangro-campo-felice-rocca-di-cambio/" coords="583,503,73" shape="circle">
+            <area target="_blank" alt="sidi" title="sidi" href="https://www.sidi.com/en/" coords="715,495,26" shape="circle">
+            <area target="_blank" alt="pinarello" title="pinarello" href="https://pinarello.com/en-us" coords="722,296,832,303,776,331,779,372,779,423,770,471,761,505,751,390" shape="poly">
+            <area target="_blank" alt="cervelo" title="cervelo" href="https://www.cervelo.com/en/" coords="241,301,339,310,325,343,329,383,333,428,336,519,267,538,279,372" shape="poly">
+            <area target="_blank" alt="trek" title="trek" href="https://www.trekbikes.com/us/en_US/" coords="427,283,518,272,484,335,495,474,461,423,435,451,458,359,453,315" shape="poly">
             <br>
             <ul>
                 <li>Egan Bernal's face (rider on the far right)</li>
