pizza parlor contact form

--- a/pizza-1/contact.html
+++ b/pizza-1/contact.html
@@ -12,7 +12,7 @@
             <li><a href= "about.html">About</a></li>
             <li><a href= "order.html">Order</a></li>
         </ul>
-        <form action="https://www.stonecoldprofessor.com/pizza-contact.php">
+        <form method= "post" action="https://www.stonecoldprofessor.com/pizza-contact.php">
             <label for="first-name"></label>First Name:<br>
             <input name="first-name" id="first-name" type="text"><br>
             <label for="last-name"></label>Last Name:<br>
