final draft of crust site

--- a/pizza-2/about.html
+++ b/pizza-2/about.html
@@ -6,16 +6,36 @@
         <link rel="stylesheet" type="text/css" href="../css/pizza-2.css">
     </head>
     <body>
-        <nav>
-        <ul>
-            <li class="logo">CRUST</li>
-            <li><a href= "index.html">Home</a></li>
-            <li><a href= "contact.html">Contact</a></li>
-            <li><a class="active" href= "about.html">About</a></li>
-            <li><a href= "order.html">Order</a></li>
-        </ul>
-        </nav>
-        <h1>About Crust</h1>
-        <p>Crust was created in 2021 as a way to come up with at least nine different crust options on our order form. Now it's your neighborhood pizza joint - if your nieghborhood is just on the internet. You might be wondering: How can Crust make so many disparate styles of pizza? It's simple: you can order it, right? Someone (arguably a pizza lover) once said, "if it's not on the internet, it doesn't exist." We here at Crust have taken this to its logical conclusion. </p>
+        <main class="about-background">
+            <nav>
+                <ul>
+                    <li class="logo">CRUST</li>
+                    <li><a href= "index.html">Home</a></li>
+                    <li><a id="active" href= "about.html">About</a></li>
+                    <li><a href= "order.html">Order</a></li>
+                    <li><a href= "contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <h1 class="about-header">About CRUST</h1>
+            <p class="about-text">Crust was created in 2021 as a way to come up with at least nine different crust options on our order form. Now it's your neighborhood pizza joint - if your nieghborhood is just on the internet. You might be wondering: How can Crust make so many disparate styles of pizza? It's simple: you can order it, right? Someone (arguably a pizza lover) once said, "if it's not on the internet, it doesn't exist." We here at Crust have taken this to its logical conclusion. </p>
+        </main>
+        <footer>
+            <h1 class="footer-h1">CRUST</h1>
+            <hr>
+            <div class="img-box">
+                <div class="img-box1"></div>
+                <div class="img-box2"></div>
+                <div class="img-box3"></div>
+            </div>
+            <nav class="footer-nav">
+                <ul>
+                    <li class="footer-logo">CRUST</li>
+                    <li><a href= "index.html">Home</a></li>
+                    <li><a id="active" href= "about.html">About</a></li>
+                    <li><a href= "order.html">Order</a></li>
+                    <li><a href= "contact.html">Contact</a></li>
+                </ul>
+                </nav> 
+        </footer>
     </body>
 </html>  
