--- a/pizza-2/index.html
+++ b/pizza-2/index.html
@@ -6,16 +6,41 @@
         <link rel="stylesheet" type="text/css" href="../css/pizza-2.css">
     </head>
     <body>
-        <nav>
-        <ul>
-            <li class="logo">CRUST</li>
-            <li><a class="active" href= "index.html">Home</a></li>
-            <li><a href= "contact.html">Contact</a></li>
-            <li><a href= "about.html">About</a></li>
-            <li><a href= "order.html">Order</a></li>
-        </ul>
-        </nav> 
-        <h1>Introducing Crust</h1> 
-        <p>Welcome to your new nieghborhood pizza shop, which only exists on the internet. We here at Crust specialize in a wide range of radically different pizza styles. From Neapolitan to Chicago deep-dish, thin New York slices to the rectangles of Rome - if it has a crust, we make it. We even dish up options for the grocery store connoisseurs and the pizza-for-breakfast crowd, so don't skip out on our frozen and "next-morning cold" varietals. </p>
+        <main class="home-background">
+            <nav>
+            <ul>
+                <li class="logo">CRUST</li>
+                <li><a id="active" href= "index.html">Home</a></li>
+                <li><a href= "about.html">About</a></li>
+                <li><a href= "order.html">Order</a></li>
+                <li><a href= "contact.html">Contact</a></li>
+            </ul>
+            </nav> 
+            <h1>Introducing CRUST</h1> 
+            <p class="home-text">Welcome to your new nieghborhood pizza shop, which only exists on the internet. We here at Crust specialize  in a wide range of radically different pizza styles. From Neapolitan to Chicago deep-dish, thin New York slices  to the rectangles of Rome - if it has a crust, we make it. We even dish up options for the grocery store     connoisseurs and the pizza-for-breakfast crowd, so don't skip out on our frozen and "next-morning cold"     varietals. </p>
+        </main>
+        <footer>
+            <h1 class="footer-h1">Hours + Location</h1>
+            <hr>
+            <div class="hours-box">
+            <h2>Hours</h2>
+            <p>24 hours a day, 7 days week.</p>
+            <p>We never close.</p>
+            </div>
+            <div class="location-box">
+            <h2>Location</h2>
+            <p>We're on the internet, only.</p>
+            <p>We're everywhere.</p>
+            </div>
+            <nav class="footer-nav">
+                <ul>
+                    <li class="footer-logo">CRUST</li>
+                    <li><a id="active" href= "index.html">Home</a></li>
+                    <li><a href= "about.html">About</a></li>
+                    <li><a href= "order.html">Order</a></li>
+                    <li><a href= "contact.html">Contact</a></li>
+                </ul>
+                </nav> 
+        </footer>
     </body>
 </html>    
