--- a/pizza-2/order.html
+++ b/pizza-2/order.html
@@ -123,7 +123,7 @@
                     <input name="city" id="city" type="text"><br>
                     <label for="state">State:</label><br>
                     <select name="state" id="state">
-                        <option></option>
+                        <option value="">State</option>
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
                         <option value="AZ">Arizona</option>
