--- a/pizza-2/index.html
+++ b/pizza-2/index.html
@@ -10,7 +10,7 @@
             <nav>
             <ul>
                 <li class="logo">CRUST</li>
-                <li><a id="active" href= "index.html">Home</a></li>
+                <li><a class="active" href= "index.html">Home</a></li>
                 <li><a href= "about.html">About</a></li>
                 <li><a href= "order.html">Order</a></li>
                 <li><a href= "contact.html">Contact</a></li>
@@ -35,7 +35,7 @@
             <nav class="footer-nav">
                 <ul>
                     <li class="footer-logo">CRUST</li>
-                    <li><a id="active" href= "index.html">Home</a></li>
+                    <li><a class="active" href= "index.html">Home</a></li>
                     <li><a href= "about.html">About</a></li>
                     <li><a href= "order.html">Order</a></li>
                     <li><a href= "contact.html">Contact</a></li>
