--- a/pizza-2/about.html
+++ b/pizza-2/about.html
@@ -11,7 +11,7 @@
                 <ul>
                     <li class="logo">CRUST</li>
                     <li><a href= "index.html">Home</a></li>
-                    <li><a id="active" href= "about.html">About</a></li>
+                    <li><a class="active" href= "about.html">About</a></li>
                     <li><a href= "order.html">Order</a></li>
                     <li><a href= "contact.html">Contact</a></li>
                 </ul>
@@ -31,7 +31,7 @@
                 <ul>
                     <li class="footer-logo">CRUST</li>
                     <li><a href= "index.html">Home</a></li>
-                    <li><a id="active" href= "about.html">About</a></li>
+                    <li><a class="active" href= "about.html">About</a></li>
                     <li><a href= "order.html">Order</a></li>
                     <li><a href= "contact.html">Contact</a></li>
                 </ul>
