--- a/pizza-2/contact.html
+++ b/pizza-2/contact.html
@@ -13,7 +13,7 @@
                     <li><a href= "index.html">Home</a></li>
                     <li><a href= "about.html">About</a></li>
                     <li><a href= "order.html">Order</a></li>
-                    <li><a id="active" href= "contact.html">Contact</a></li>
+                    <li><a class="active" href= "contact.html">Contact</a></li>
                 </ul>
             </nav>
             <h1>Contact Us</h1>
