--- a/pizza-2/order.html
+++ b/pizza-2/order.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title> Crust Order </title>
+        <title> Crust - Order </title>
         <link rel="stylesheet" type="text/css" href="../css/pizza-2.css">
     </head>
     <body>
@@ -12,7 +12,7 @@
                 <li class="logo">CRUST</li>
                 <li><a href= "index.html">Home</a></li>
                 <li><a href= "about.html">About</a></li>
-                <li><a id="active" href= "order.html">Order</a></li>
+                <li><a class="active" href= "order.html">Order</a></li>
                 <li><a href= "contact.html">Contact</a></li>
             </ul>
             </nav>
