--- a/js-birthday/index.html
+++ b/js-birthday/index.html
@@ -7,6 +7,7 @@
             <script src="../js/birthday.js"></script>
     </head>
     <body>
-        <h1>Happy Birthday</h1>
+        <h1>Happy Birthday!</h1>
+        <p>Because it's your birthday, you can view this <a href="../js/birthday.js">JavaScript file</a> as a birthday present. Enjoy!</p>
     </body>
 </html>
