--- a/mad-lib/index.html
+++ b/mad-lib/index.html
@@ -7,8 +7,10 @@
         <script src="../js/madlib.js"></script>
     </head>
     <body>
-        <h1>Night Run</h1>
         <button onclick="showstory();">Show your story!</button>
-        <p id="story" class="hide">The <span id="noun1">____</span> ran up the hill. The <span id="adj1">____</span> <span id="noun1b">____</span> was tired from all the running, so the <span id="noun1c">____</span> <span id="verb1">verb1</span> until the sun went down. The night brought on a <span id="adj2">___</span> <span id="noun2">____</span> that made the <span id="noun1d">____</span> afraid. The <span id="noun1e">____</span> <span id="verb2">____</span> into the nearest pond to hide. The end. </p>
+        <h1 id="title1" class="hide">Night Run</h1>
+        <p id="story1" class="hide">The <span id="noun1">____</span> ran up the hill. The <span id="adj1">____</span> <span id="noun1b">____</span> was tired from all the running, so the <span id="noun1c">____</span> <span id="verb1">verb1</span> until the sun went down. The night brought on a <span id="adj2">___</span> <span id="noun2">____</span> that made the <span id="noun1d">____</span> afraid. The <span id="noun1e">____</span> <span id="verb2">____</span> into the nearest pond to hide. The end. </p>
+        <h1 id="title2" class="hide">Desert</h1>
+        <p id="story2" class="hide">Out in the desert, the <span id="desnoun1"></span> is king. The <span id="desadj1"></span> <span id="desnoun2"></span> knows the sun is hot, so the <span id="desnoun2b"></span> <span id="desverb1"></span>, while the <span id="desnoun1b"></span> sits in the shade. But when the <span id="desnoun2c"></span> <span id="desverb2"></span>, the <span id="desadj2"></span> sun flames out and the world ends, like this story. The end. </p>
     </body>
 </html>
